--- a/FA1_pagalan/HOME.html
+++ b/FA1_pagalan/HOME.html
@@ -5,9 +5,9 @@
 	<hr>
 	</head>
 	<body>
-		<a href ="file:///C:/Users/User/Documents/FA1_pagalan/files/chess.html"><img src="images/chess.png" height=100px width=100px></a>
-		<a href ="file:///C:/Users/User/Documents/FA1_pagalan/files/badminton.html"><img src="images/volleyball.jpg" height=100px width=100px></a>
-		<a href ="file:///C:/Users/User/Documents/FA1_pagalan/files/volleyball.html"><img src="images/shuttlecock.png" height=100px width=100px></a>
+		<a href ="files/chess.html"><img src="images/chess.png" height=100px width=100px></a>
+		<a href ="files/badminton.html"><img src="images/volleyball.jpg" height=100px width=100px></a>
+		<a href ="files/volleyball.html"><img src="images/shuttlecock.png" height=100px width=100px></a>
 	<h2>Click on the image to know more.<h2>
 	</body>
 </html>
