--- a/Index(AA1)/index.html
+++ b/Index(AA1)/index.html
@@ -9,23 +9,23 @@
 	<ul>
 	<li>Basic HTML</li>
 		<ul>
-		<li><a href="Index(AA1)/mod2-1_pagalan.html"> Laboratory Exercise 1</a></li>
-		<li><a href="Index(AA1)/mod2-2_pagalan.html">Laboratory Exercise 2</a></li>
-		<li><a href="Index(AA1)/mod2-3_Pagalan_1.html">Laboratory Exercise 3</a></li>
+		<li><a href="https://iamlilz.github.io/CS3/Index(AA1)/mod2-1_pagalan.html"> Laboratory Exercise 1</a></li>
+		<li><a href="https://iamlilz.github.io/CS3/Index(AA1)/mod2-2_pagalan.html">Laboratory Exercise 2</a></li>
+		<li><a href="https://iamlilz.github.io/CS3/Index(AA1)/mod2-3_Pagalan_1.html">Laboratory Exercise 3</a></li>
 	</ul>
 	</ul>
 
 	<ul>
 	<li>HTML Tables</li>
 		<ul>
-		<li><a href="Index(AA1)/mod3-1_Pagalan.html">Laboratory Exercise 4</a></li>
+		<li><a href="https://iamlilz.github.io/CS3/Index(AA1)/mod3-1_Pagalan.html">Laboratory Exercise 4</a></li>
 	</ul>	
 	</ul>
 
 	<ul>
 	<li>Best Practices in Design and Layout</li>
 		<ul>
-		<li><a href="Index(AA1)/mod3-2_Pagalan.html">Laboratory Exercise 5</a></li>
+		<li><a href="https://iamlilz.github.io/CS3/Index(AA1)/mod3-2_Pagalan.html">Laboratory Exercise 5</a></li>
 	</ul>
 	</ul>
 	<p>Copyright &copy; KJGPagalan 9-Lithium</p>
