--- a/Index(AA1)/index.html
+++ b/Index(AA1)/index.html
@@ -9,7 +9,7 @@
 	<ul>
 	<li>Basic HTML</li>
 		<ul>
-		<li><a href="https://iamlilz.github.io/CS3/Index(AA1)/mod2-1_pagalan.html"> Laboratory Exercise 1</a></li>
+		<li><a href="https://github.com/iamlilz/CS3/blob/main/Index(AA1)/mod2-1_pagalan.html"> Laboratory Exercise 1</a></li>
 		<li><a href="Index(AA1)/mod2-2_pagalan.html">Laboratory Exercise 2</a></li>
 		<li><a href="Index(AA1)/mod2-3_Pagalan_1.html">Laboratory Exercise 3</a></li>
 	</ul>
