--- a/Index(AA1)/mod2-3_Pagalan_1.html
+++ b/Index(AA1)/mod2-3_Pagalan_1.html
@@ -4,6 +4,6 @@
 		<h1>See an awesome picture.<h1>
 	</head>
 	<body>
-		<a href="file:///C:/Users/Pagalan/Documents/CS3_Pagalan/mod2-3-Pagalan/mod2-3_Pagalan_2.html">Click here!</a>
+		<a href="CS3/Index(AA1)/mod2-3_Pagalan_2.html">Click here!</a>
 	</body>
 </html>
