--- a/Index(AA1)/mod2-3_Pagalan_2.html
+++ b/Index(AA1)/mod2-3_Pagalan_2.html
@@ -4,11 +4,11 @@
 		<h1>My 3 favorite characters of Haikyuu!!</h1>
 	</head>
 	<body>
-		<img src="bokuto.jfif" alt="This is a picture">
+		<img src="mod2-3-Pagalan-images/bokuto.jfif" alt="This is a picture">
 		<p>Bokuto Kotaro is the captain and ace of Fukurodani Academy.</p> 
-		<img src="ushiwaka.jfif" alt="This is a picture">
+		<img src="mod2-3-Pagalan-images/ushiwaka.jfif" alt="This is a picture">
 		<p>Ushijima Wakatoshi is the captain and ace of Shiratorizawa Academy</p>
-		<img src="nishinoya.jfif" alt="This is a picture">
+		<img src="mod2-3-Pagalan-images/nishinoya.jfif" alt="This is a picture">
 		<p> Nishinoya Yu is the libero of Karasuno High. He is also known for being their "guardian angel".</p>
 	</body>
 </html>
