--- a/Index(AA1)/mod3-2_Pagalan.html
+++ b/Index(AA1)/mod3-2_Pagalan.html
@@ -36,52 +36,52 @@
 	</tr>
 	
 	<tr>
-	<td style="border: 1px solid black; padding: 10px"> Yes </td> 
+	<td style="border: 1px solid black; padding: 10px" background-color:red> </td> 
 	<td style="border: 1px solid black; padding: 10px">Do the colors or theme work well together? </td> 
 	</tr>
 	
 	<tr>
-	<td style="border: 1px solid black; padding: 10px"> Yes </td> 
+	<td style="border: 1px solid black; padding: 10px" background-color:red>  </td> 
 	<td style="border: 1px solid black; padding: 10px">Are the elements “orchestrated properly”? </td> 
 	</tr>
 	
 	<tr>
-	<td style="border: 1px solid black; padding: 10px"> Yes </td> 
+	<td style="border: 1px solid black; padding: 10px" background-color:red> </td> 
 	<td style="border: 1px solid black; padding: 10px"> Is the product/company branding visually presented? </td> 
 	</tr>
 	
 	<tr>
-	<td style="border: 1px solid black; padding: 10px"> Yes </td> 
+	<td style="border: 1px solid black; padding: 10px" background-color:red> </td> 
 	<td style="border: 1px solid black; padding: 10px">Do the colors emulate the appropriate mood and feelings of the content? </td> 
 	</tr>
 		
 	<tr>
-	<td style="border: 1px solid black; padding: 10px"> Yes </td> 
+	<td style="border: 1px solid black; padding: 10px" background-color:red> </td> 
 	<td style="border: 1px solid black; padding: 10px"> Are the colors age, gender, or culture appropriate</td>
 	</tr>
 	
 	<tr>
-	<td style="border: 1px solid black; padding: 10px"> Yes </td> 
+	<td style="border: 1px solid black; padding: 10px" background-color:red>  </td> 
 	<td style="border: 1px solid black; padding: 10px">Does the color palette used effectively follow the 60/30/10 rule?</td>
 	</tr>
 	
 	<tr>
-	<td style="border: 1px solid black; padding: 10px"> Yes </td> 
+	<td style="border: 1px solid black; padding: 10px" background-color:red>  </td> 
 	<td style="border: 1px solid black; padding: 10px"> Did the website use contrasting colors for its text and background?</td>
 	</tr>
 	
 	<tr>
-	<td style="border: 1px solid black; padding: 10px"> Yes </td> 
+	<td style="border: 1px solid black; padding: 10px" background-color:red> </td> 
 	<td style="border: 1px solid black; padding: 10px"> Can the text be easily read and appropriate emphasis were given on the text contents, using colors?</td>
 	</tr>
 
 	<tr>
-	<td style="border: 1px solid black; padding: 10px"> Yes </td> 
+	<td style="border: 1px solid black; padding: 10px" background-color:red> </td> 
 	<td style="border: 1px solid black; padding: 10px"> Are the colors effectively used to separate certain sections or portions of the page? </td>
 	</tr>
 
 	<tr>
-	<td style="border: 1px solid black; padding: 10px"> Yes </td> 
+	<td style="border: 1px solid black; padding: 10px" background-color:red>  </td> 
 	<td style="border: 1px solid black; padding: 10px"> Does the website have a consistent feel and appearance, emulating “wholeness”?</td>
 	</tr>
 
