--- a/LithiumPagalan1stQtrProj_v1/htdocs/spendtime.html
+++ b/LithiumPagalan1stQtrProj_v1/htdocs/spendtime.html
@@ -1,12 +1,39 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<h1> The Act of Spending Time </h1>
-	<h2> A special action for that special someone.</h2>
+	<link rel="stylesheet" href="spendtime.css">
 </head>
 <body>
-	<div id="gift">
-	<p> The reality of this world is that when we grow up, we tend to get busy at worldly affairs, forgetting what we used to do, what we used to like, who we used to hang out with. We get so busy that we can no longer spend time with our family, friends and pets. However, i would like to remind you that our time is short in this world, so while you still can, do spend some quality time with your loved ones.</p>
+	<div id="head">
+	<h1> Chapter 2: The Act of Spending Time </h1>
+	<h3> A special action for that special someone.</h3>
+	</div>
+	<div id="content">
+		<p> The reality of this world is that when we grow up, we tend to get busy at worldly affairs, forgetting what we used to do, what we used to like, and who we used to hang out with. We get so busy that we can no longer spend time with our family, friends and pets. However, i would like to remind you that our time is short in this world, so while you still can, do spend some quality time with your loved ones.</p>
+		<div id="spendtime">
+			<img src="../images/spendtime.jfif">
+			<img src="../images/spendtime2.jfif">
+			<img src="../images/spendtime1.jfif">
+		</div>
+	</div>
+	<div id="icons">
+		<div class="sidenav">
+			<ul>
+				<li> <a href="#">
+					<img src="../images/profile.png" width="50px" height="50px">
+				</a></li>
+				<li> <a href="../index.html">
+					<img src="../images/home.png" width="50px" height="50px">
+				</a></li>
+				<li> <a href="XOXO.html">
+					<img src="../images/next.png" width="50px" height="50px">
+				</a></li>
+					<li> <a href="Gifts.html">
+					<img src="../images/back.png" width="50px" height="50px">
+				</a></li>
+			</ul>
+		</div>
+	</div>
 	</div>
 </body>
 </html>
