--- a/LithiumPagalan1stQtrProj_v1/index.html
+++ b/LithiumPagalan1stQtrProj_v1/index.html
@@ -1,45 +1,35 @@
 <!DOCTYPE html>
 <html>
 <head>
+	<link rel="stylesheet" href="htdocs/homeedit.css">
 	<title> The Gift of Giving </title>
 </head>
 <body>
+	<div class="main">
 	<div id="head">
 		<h1> The Gift of Giving </h1>
-		<p> A special action for that special someone.</p>
+		<h3> A Special Action for that Special Someone</ph3>
 	</div>
-	<div id="way">
-		<h2> <a href="htdocs/Gifts.html"> Chapter 1: The Act of Gifting </a></h2>
-		<img src="images/giftgiving.jfif">
-	<div id="spendtime">
-		<h2> <a href="htdocs/spendtime.html"> Chapter 2: The Act of Spending Time </a></h2>
-		<img src="images/spendtime.jfif">
-	</div>
-	<div id="xoxo">
-		<h2> <a href="htdocs/XOXO.html"> Chapter 3: The Act of Showing Affection </a></h2>
-		<img src="images/XOXO.jfif">
-	</div>
+	<div id="content">
+		<p>  Every people has those they cherish. We wish to make them happy, to make them smile, and to give them their wants and needs.</p>
+		<p> This website is a guide on how to make your loved ones feel more special- of course if you don't know how to. But in this guide you will find ways that you can do to do a special action for that special someone.</p>
+		<h3><a href="nextpage.html">Let's get Started!</a></h3>
 	</div>
 	<div id="icons">
-		<ul>
-			<li>
-			<img src="images/profile.png" width="50px" height="50px">
-			</li>
-		</ul>
-		<ul>
-			<li>
-			<img src="images/home.jfif" width="50px" height="50px">
-			</li>
-		</ul>
-		<ul>
-			<li>
-			<img src="images/next.jfif" width="50px" height="50px">
-			</li>
-		</ul>
-		<ul>
-			<li>
-			<img src="images/back.jfif" width="50px" height="50px">
-			</li>
-		</ul>
+		<div class="sidenav">
+			<ul>
+				<li> <a href="#">
+					<img src="images/profile.png" width="50px" height="50px">
+				</a></li>
+				<li> <a href="index.html">
+					<img src="images/home.png" width="50px" height="50px">
+				</a></li>
+				<li> <a href="nextpage.html">
+					<img src="images/next.png" width="50px" height="50px">
+				</a></li>
+			</ul>
+		</div>
+	</div>
+	</div>
 </body>
 </html>
