--- a/LithiumPagalan1stQtrProj_v1/htdocs/avail.html
+++ b/LithiumPagalan1stQtrProj_v1/htdocs/avail.html
@@ -2,21 +2,15 @@
 <html>
 <head>
 	<link rel="stylesheet" href="XOXO.css">
-	<title>Chapter 3: The Act of Showing Affection </title>
+	<title>OOPS! SORRY! </title>
 </head>
 <body>
 	<div id="head">
-	<h1>Chapter 3: The Act of Showing Affection </h1>
-	<h3> A special action for that special someone.</h3>
+	<h1>OOPS! SORRY! </h1>
+	<h3> This page is currently not available</h3>
 	</div>
 	<div id="content">
-	<p>One bitter truth is that most people can only be happy with material things- jewelery, money, designer bags, luxury cars, the latest phones, and all expensive stuff. While some needs the pleasure of being a suprior being, someone who likes being the center of the attention. While very little people only needs daily affections - something affordable yet so unique, so give them that while you still can.</p>
-	<div id="XOXO">
-			<img src="../images/XOXO.jfif">
-			<img src="../images/XOXO2.jfif">
-			<img src="../images/XOXO1.jfif">
-		</div>
-	</div>
+		<img src="../images/notavail.png" width="700px" height="400px">
 	<div id="icons">
 		<div class="sidenav">
 			<ul>
