--- a/LithiumPagalan1stQtrProj_v1/htdocs/Gifts.html
+++ b/LithiumPagalan1stQtrProj_v1/htdocs/Gifts.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<link rel="stylesheet" href="gifts.css">
-	<title> The Gift of Giving </title>
+	<title> Chapter 1: The Act of Giving </title>
 </head>
 <body>
 	<div id="head">
@@ -20,19 +20,21 @@
 	<div id="icons">
 		<div class="sidenav">
 			<ul>
-				<li> <a href="#">
+				<li> <a href="avail.html">
 					<img src="../images/profile.png" width="50px" height="50px">
 				</a></li>
 				<li> <a href="../index.html">
 					<img src="../images/home.png" width="50px" height="50px">
 				</a></li>
-				<li> <a href="../nextpage.html">
+		<div id="nav">
+				<li> <a href="spendtime.html">
 					<img src="../images/next.png" width="50px" height="50px">
 				</a></li>
-					<li> <a href="../nextpage.html">
+					<li> <a href="nextpage.html">
 					<img src="../images/back.png" width="50px" height="50px">
 				</a></li>
 			</ul>
+		</div>
 		</div>
 	</div>
 	</div>
