--- a/LithiumPagalan1stQtrProj_v1/htdocs/spendtime.html
+++ b/LithiumPagalan1stQtrProj_v1/htdocs/spendtime.html
@@ -2,6 +2,7 @@
 <html>
 <head>
 	<link rel="stylesheet" href="spendtime.css">
+	<title>Chapter 2: The Act of Spending Time </title>
 </head>
 <body>
 	<div id="head">
@@ -19,19 +20,21 @@
 	<div id="icons">
 		<div class="sidenav">
 			<ul>
-				<li> <a href="#">
+				<li> <a href="avail.html">
 					<img src="../images/profile.png" width="50px" height="50px">
 				</a></li>
 				<li> <a href="../index.html">
 					<img src="../images/home.png" width="50px" height="50px">
 				</a></li>
-				<li> <a href="XOXO.html">
+		<div id="nav">
+				<li> <a href="XOXO.HTML">
 					<img src="../images/next.png" width="50px" height="50px">
 				</a></li>
-					<li> <a href="Gifts.html">
+					<li> <a href="nextpage.html">
 					<img src="../images/back.png" width="50px" height="50px">
 				</a></li>
 			</ul>
+		</div>
 		</div>
 	</div>
 	</div>
