--- a/LithiumPagalan1stQtrProj_v1/index.html
+++ b/LithiumPagalan1stQtrProj_v1/index.html
@@ -18,17 +18,19 @@
 	<div id="icons">
 		<div class="sidenav">
 			<ul>
-				<li> <a href="#">
+				<li> <a href="htdocs/avail.html">
 					<img src="images/profile.png" width="50px" height="50px">
 				</a></li>
 				<li> <a href="index.html">
 					<img src="images/home.png" width="50px" height="50px">
 				</a></li>
+		</div>
+		<div id="nav">
 				<li> <a href="nextpage.html">
 					<img src="images/next.png" width="50px" height="50px">
 				</a></li>
-			</ul>
 		</div>
+			</ul>
 	</div>
 	</div>
 </body>
