--- a/LithiumPagalan1stQtrProj_v1/index.html
+++ b/LithiumPagalan1stQtrProj_v1/index.html
@@ -21,7 +21,7 @@
 				<li> <a href="htdocs/avail.html">
 					<img src="images/profile.png" width="50px" height="50px">
 				</a></li>
-				<li> <a href="index.html">
+				<li> <a href="../index.html">
 					<img src="images/home.png" width="50px" height="50px">
 				</a></li>
 		</div>
