--- a/LithiumPagalan1stQtrProj_v1/htdocs/spendtime.html
+++ b/LithiumPagalan1stQtrProj_v1/htdocs/spendtime.html
@@ -27,7 +27,7 @@
 					<img src="../images/home.png" width="50px" height="50px">
 				</a></li>
 		<div id="nav">
-				<li> <a href="XOXO.HTML">
+				<li> <a href="XOXO.html">
 					<img src="../images/next.png" width="50px" height="50px">
 				</a></li>
 					<li> <a href="nextpage.html">
