--- a/LithiumPagalan1stQtrProj_v1/htdocs/nextpage.html
+++ b/LithiumPagalan1stQtrProj_v1/htdocs/nextpage.html
@@ -35,7 +35,7 @@
 				</a></li>
 		</div>
 		<div id="nav">
-				<li> <a href="gifts.html">
+				<li> <a href="htdocs/gifts.html">
 					<img src="../images/next.png" width="50px" height="50px">
 				</a></li>
 				</li>
