--- a/Q2_AA2_Pagalan/Q2_AA2_Pagalan.html
+++ b/Q2_AA2_Pagalan/Q2_AA2_Pagalan.html
@@ -48,6 +48,9 @@
 			height: 100px;
 			color: transparent;
         }
+		#red:active p{
+			display: none;
+		}
         #blue:hover{
             background-color: blue;
 			border: 1px solid gold;
@@ -59,6 +62,9 @@
 			width : 100px;
 			height: 100px;
 			color: transparent;
+		}
+		#blue:active p{
+			display: none;
 		}
 	</style>
 	</head>
