--- a/LithiumPagalan1stQtrProj_v1/htdocs/Gifts.html
+++ b/LithiumPagalan1stQtrProj_v1/htdocs/Gifts.html
@@ -2,23 +2,27 @@
 <html>
 <head>
 	<link rel="stylesheet" href="gifts.css">
-	<title> Chapter 1: The Act of Giving </title>
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<title> Chapter 2: The Act of Giving </title>
 </head>
 <body>
-	<div id="head">
-	<h1> Chapter 1: The Act of Gifting </h1>
+	<header>
+	<h1> Chapter 2: The Act of Gifting </h1>
 	<h3> A special action for that special someone.</h3>
-	</div>
-	<div id="content">
+	</header>
+	<section id="content">
 		<p> When we think of our special loved ones, we think of what would suit them. We would think if they look good with shirts, dresses, sweaters, jackets, or accesories. Or we could also think about what they need or what they want. They might need snacks, clothes, cups, cookware and more. Or they might want toys, small trinkets or even jewelries. Nonetheless giving gifts is a special way to show them we care for them.</p>
-	<div id="gift">
+	<article id="gift">
 		<img src="../images/gift.jfif">
 		<img src="../images/giftgiving.jfif">
 		<img src="../images/gift2.jfif">
-	</div>
-	</div>
-	<div id="icons">
-		<div class="sidenav">
+		<video width="75%" controls autoplay>
+				<source src="../videos/GiftofGiving.mp4">
+		</video>
+	</article>
+	</section>
+	<section id="icons">
+		<aside>
 			<ul>
 				<li> <a href="avail.html">
 					<img src="../images/profile.png" width="50px" height="50px">
@@ -26,17 +30,24 @@
 				<li> <a href="../index.html">
 					<img src="../images/home.png" width="50px" height="50px">
 				</a></li>
-		<div id="nav">
+		<aside id="nav">
 				<li> <a href="spendtime.html">
 					<img src="../images/next.png" width="50px" height="50px">
 				</a></li>
 					<li> <a href="nextpage.html">
 					<img src="../images/back.png" width="50px" height="50px">
 				</a></li>
+				<li> <a href="info.html">
+					<img src="../images/info.png" width="50px" height="50px">
+				</a></li>
 			</ul>
-		</div>
-		</div>
-	</div>
-	</div>
+		</aside>
+		<footer id="botnav">
+				<a href="index.html">Home	|	</a>
+				<a href="https://www.facebook.com/kaljoyce.pagalan.3">	Author's Facebook	|	</a>
+				<a href="https://www.facebook.com/jjim01">	Sir Jimmy's Facebook</a>
+		</footer>
+		</aside> 
+	</section>
 </body>
 </html>
