--- a/LithiumPagalan1stQtrProj_v1/htdocs/XOXO.html
+++ b/LithiumPagalan1stQtrProj_v1/htdocs/XOXO.html
@@ -2,11 +2,12 @@
 <html>
 <head>
 	<link rel="stylesheet" href="XOXO.css">
-	<title>Chapter 3: The Act of Showing Affection </title>
+	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<title>Chapter 1: The Act of Showing Affection </title>
 </head>
 <body>
 	<div id="head">
-	<h1>Chapter 3: The Act of Showing Affection </h1>
+	<h1>Chapter 1: The Act of Showing Affection </h1>
 	<h3> A special action for that special someone.</h3>
 	</div>
 	<div id="content">
@@ -27,13 +28,21 @@
 					<img src="../images/home.png" width="50px" height="50px">
 				</a></li>
 		<div id="nav">
-				<li> <a href="avail.html">
+				<li> <a href="Gifts.html">
 					<img src="../images/next.png" width="50px" height="50px">
 				</a></li>
 					<li> <a href="nextpage.html">
 					<img src="../images/back.png" width="50px" height="50px">
 				</a></li>
+				<li> <a href="info.html">
+					<img src="../images/info.png" width="50px" height="50px">
+				</a></li>
 			</ul>
+		</div>
+		<div id="botnav">
+				<a href="index.html">Home	|	</a>
+				<a href="https://www.facebook.com/kaljoyce.pagalan.3">	Author's Facebook	|	</a>
+				<a href="https://www.facebook.com/jjim01">	Sir Jimmy's Facebook</a>
 		</div>
 		</div>
 	</div>
