--- a/LithiumPagalan1stQtrProj_v1/htdocs/avail.html
+++ b/LithiumPagalan1stQtrProj_v1/htdocs/avail.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<link rel="stylesheet" href="XOXO.css">
+	<link rel="stylesheet" href="avail.css">
 	<title>OOPS! SORRY! </title>
 </head>
 <body>
@@ -27,7 +27,15 @@
 					<li> <a href="nextpage.html">
 					<img src="../images/back.png" width="50px" height="50px">
 				</a></li>
+				<li> <a href="info.html">
+					<img src="../images/info.png" width="50px" height="50px">
+				</a></li>
 			</ul>
+		</div>
+		<div id="botnav">
+				<a href="index.html">Home	|	</a>
+				<a href="https://www.facebook.com/kaljoyce.pagalan.3">	Author's Facebook	|	</a>
+				<a href="https://www.facebook.com/jjim01">	Sir Jimmy's Facebook</a>
 		</div>
 		</div>
 	</div>
