--- a/LithiumPagalan1stQtrProj_v1/htdocs/info.html
+++ b/LithiumPagalan1stQtrProj_v1/htdocs/info.html
@@ -1,25 +1,26 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<link rel="stylesheet" href="spendtime.css">
-	<title>Chapter 3: The Act of Spending Time </title>
+	<link rel="stylesheet" href="info.css">
+	<title>About the Website </title>
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 <body>
 	<header>
-	<h1> Chapter 3: The Act of Spending Time </h1>
-	<h3> A special action for that special someone.</h3>
+	<h1> About the Website </h1>
+	<h3> All you need to know about the website</h3>
 	</header>
 	<section id="content">
-		<p> The reality of this world is that when we grow up, we tend to get busy at worldly affairs, forgetting what we used to do, what we used to like, and who we used to hang out with. We get so busy that we can no longer spend time with our family, friends and pets. However, I would like to remind you that our time is short in this world, so while you still can, do spend some quality time with your loved ones.</p>
-		<article id="spendtime">
-			<img src="../images/spendtime.jfif">
-			<img src="../images/spendtime2.jfif">
-			<img src="../images/spendtime1.jfif">
-			<video width="75%" controls autoplay>
-				<source src="../videos/spendtime.mp4">
-			</video>
+		<p> This website is created solely for educational purposes. A requirement for Computer Science 3 by Sir Jimmy Unilongo.</p>
+		<p> This project is created by Pagalan, Kalila Joyce G. , 9-Lithium , Batch 2020-2026</p>
+	<section id="authorinfo">
+		<article href="#" id="mail" > <p> Email </p> 
+			<span class="mail" > <p> kjgpagalan@src.pshs.edu.ph </p> </span>
 		</article>
+		<article href="#" id="fb" > <p> Facebook </p> 
+			<span class="fb" > <p> Kalila Joyce G. Pagalan</p> </span>
+		</article>
+	</section>
 	</section>
 	<section id="icons">
 		<aside>
