--- a/LithiumPagalan1stQtrProj_v1/htdocs/nextpage.html
+++ b/LithiumPagalan1stQtrProj_v1/htdocs/nextpage.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<link rel="stylesheet" href="edit.css">
+	<link rel="stylesheet" href="nextpage.css">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title> The Gift of Giving</title>
 </head>
 <body>
@@ -11,17 +12,17 @@
 		<h3> A Special Action for that Special Someone</h3>
 	</div>
 	<div id="way">
+		<div id="xoxo">
+			<h2> <a href="XOXO.html"> Chapter 1: The Act of Showing Affection </a></h2>
+			<img src="../images/XOXO.jfif">
+		</div>
 		<div id="gift">
-			<h2> <a href="Gifts.html"> Chapter 1: The Act of Gifting </a></h2>
+			<h2> <a href="Gifts.html"> Chapter 2: The Act of Gifting </a></h2>
 			<img src="../images/giftgiving.jfif">
 		</div>
 		<div id="spendtime">
-			<h2> <a href="spendtime.html"> Chapter 2: The Act of Spending Time </a></h2>
+			<h2> <a href="spendtime.html"> Chapter 3: The Act of Spending Time </a></h2>
 			<img src="../images/spendtime.jfif">
-		</div>
-		<div id="xoxo">
-			<h2> <a href="XOXO.html"> Chapter 3: The Act of Showing Affection </a></h2>
-			<img src="../images/XOXO.jfif">
 		</div>
 	</div>
 	<div id="icons">
@@ -42,6 +43,14 @@
 					<li> <a href="../index.html">
 					<img src="../images/back.png" width="50px" height="50px">
 				</a></li>
+				<li> <a href="info.html">
+					<img src="../images/info.png" width="50px" height="50px">
+				</a></li>
+		</div>
+		<div id="botnav">
+				<a href="index.html">Home	|	</a>
+				<a href="https://www.facebook.com/kaljoyce.pagalan.3">	Author's Facebook	|	</a>
+				<a href="https://www.facebook.com/jjim01">	Sir Jimmy's Facebook</a>
 		</div>
 			</ul>
 	</div>
