--- a/LithiumPagalan1stQtrProj_v1/index.html
+++ b/LithiumPagalan1stQtrProj_v1/index.html
@@ -29,6 +29,14 @@
 				<li> <a href="htdocs/nextpage.html">
 					<img src="images/next.png" width="50px" height="50px">
 				</a></li>
+				<li> <a href="htdocs/info.html">
+					<img src="images/info.png" width="50px" height="50px">
+				</a></li>
+		</div>
+		<div id="botnav">
+				<a href="index.html">Home	|	</a>
+				<a href="https://www.facebook.com/kaljoyce.pagalan.3">	Author's Facebook	|	</a>
+				<a href="https://www.facebook.com/jjim01">	Sir Jimmy's Facebook</a>
 		</div>
 			</ul>
 	</div>
