--- a/LithiumPagalan1stQtrProj_v1/htdocs/Gifts.html
+++ b/LithiumPagalan1stQtrProj_v1/htdocs/Gifts.html
@@ -17,7 +17,7 @@
 		<img src="../images/giftgiving.jfif">
 		<img src="../images/gift2.jfif">
 		<video width="75%" controls autoplay>
-				<source src="../videos/GiftofGiving.mp4">
+				<source src="../videos/giftofgiving.mp4">
 		</video>
 	</article>
 	</section>
