--- a/LithiumPagalan1stQtrProj_v1/htdocs/XOXO.html
+++ b/LithiumPagalan1stQtrProj_v1/htdocs/XOXO.html
@@ -40,7 +40,7 @@
 			</ul>
 		</div>
 		<div id="botnav">
-				<a href="index.html">Home	|	</a>
+				<a href="../index.html">Home	|	</a>
 				<a href="https://www.facebook.com/kaljoyce.pagalan.3">	Author's Facebook	|	</a>
 				<a href="https://www.facebook.com/jjim01">	Sir Jimmy's Facebook</a>
 		</div>
