--- a/LithiumPagalan1stQtrProj_v1/htdocs/spendtime.html
+++ b/LithiumPagalan1stQtrProj_v1/htdocs/spendtime.html
@@ -43,7 +43,7 @@
 			</ul>
 		</aside>
 		<article id="botnav">
-				<a href="index.html">Home	|	</a>
+				<a href="../index.html">Home	|	</a>
 				<a href="https://www.facebook.com/kaljoyce.pagalan.3">	Author's Facebook	|	</a>
 				<a href="https://www.facebook.com/jjim01">	Sir Jimmy's Facebook</a>
 		</article>
