--- a/AA1_Pagalan/AA1_Pagalan.html
+++ b/AA1_Pagalan/AA1_Pagalan.html
@@ -81,7 +81,7 @@
 			</div>
 			<!--This is the computer's scoreboard and display. -->
 			<div id="computer"> 
-				<p> Evil Computer </p>
+				<p> Computer </p>
 				<p id="cScore"> 0 </p>
 				<img id="computerChoice" src="">
 			</div>
@@ -94,12 +94,7 @@
 			var random;
 			var player;
 			
-			var name = prompt("Do not enter your Name!: " , "");
-			var name = prompt("I repeat do not enter your name!: ", "");
-			var sure = prompt("Are you sure you do not want to exit? : ", "");
-			alert("This game will make you sink into depression since your opponent will be the toughest of them all.");
-			alert(" Are you sure you still want to proceed? ");
-			alert(" Ok! Don't say I didn't warned you!");
+			var name = prompt("Please enter your Name: " , "");
 			
 			document.getElementById("playerName").innerHTML = name;
 			
