--- a/SA3_LithiumPagalan.html
+++ b/SA3_LithiumPagalan.html
@@ -2,7 +2,12 @@
 <html>
 	<head>
 		<title>Choose Background Color</title>
-		<!-- provide the necessary meta tags -->
+		<meta charset="UTF-8">
+		<meta name="description" content="SA 3">
+		<meta name="author" content="KJGP">
+		<meta name="keywords" content="HTML, JavaScript">
+		<meta name="viewport" content="width=device-width, initial-scale=1.0">
+		
         <style>
         	* { box-sizing: border-box; 
             	font-family: arial; 
